# Data_Analysis_Agent

./: .gitignore  main.py  pyproject.toml
app/agent/: context.py  graph.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/client/: mysql_client_manager.py  qdrant_client_manager.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
backend/: .gitignore  main.py  pyproject.toml
backend/app/agent/: context.py
backend/app/agent/nodes/: add_extra_context.py  correct_sql.py  filter_table.py  recall_column.py  run_sql.py  validate_sql.py
backend/app/client/: embedding_client_manager.py  qdrant_client_manager.py
backend/app/prompt/: prompt_loader.py
backend/app/repositories/mysql/meta/: meta_mysql_repository.py
backend/app/repositories/qdrant/: metric_qdrant_repository.py
backend/app/services/: meta_knowledge_service.py
